Adcionado salvamento de dados à arquivos.